[gd_scene load_steps=20 format=2]

[ext_resource path="res://menu/menu.gd" type="Script" id=1]
[ext_resource path="res://menu/experiment.hdr" type="Texture" id=2]
[ext_resource path="res://player/model/player.glb" type="PackedScene" id=3]
[ext_resource path="res://menu/floor.png" type="Texture" id=4]
[ext_resource path="res://menu/menu_intro_music.ogg" type="AudioStream" id=5]
[ext_resource path="res://menu/tps_demo.png" type="Texture" id=6]
[ext_resource path="res://main/UI.tscn" type="PackedScene" id=7]
[ext_resource path="res://enemies/red_robot/red_robot.tscn" type="PackedScene" id=19]
[ext_resource path="res://player/bullet/bullet.tscn" type="PackedScene" id=20]

[sub_resource type="PanoramaSky" id=1]
panorama = ExtResource( 2 )

[sub_resource type="Environment" id=2]
background_mode = 3
background_sky = SubResource( 1 )
glow_enabled = true
glow_levels/7 = true
glow_intensity = 0.4
glow_blend_mode = 1
glow_hdr_threshold = 0.34
glow_bicubic_upscale = true

[sub_resource type="QuadMesh" id=3]
size = Vector2( 15, 15 )

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = ExtResource( 4 )
metallic = 0.78

[sub_resource type="AnimationNodeBlend2" id=5]
resource_local_to_scene = true
filter_enabled = true
filters = [ "Robot_Skeleton/Skeleton:eyelid.d.L", "Robot_Skeleton/Skeleton:eyelid.d.R", "Robot_Skeleton/Skeleton:eyelid.u.L", "Robot_Skeleton/Skeleton:eyelid.u.R", "Robot_Skeleton/Skeleton:eyes" ]

[sub_resource type="AnimationNodeAnimation" id=6]
resource_local_to_scene = true
animation = "Idlecombatrest-cycle"

[sub_resource type="AnimationNodeAnimation" id=7]
resource_local_to_scene = true
animation = "eyes-cycle"

[sub_resource type="AnimationNodeBlendTree" id=8]
resource_local_to_scene = true
graph_offset = Vector2( -260.487, 63.5 )
nodes/Blend/node = SubResource( 5 )
nodes/Blend/position = Vector2( 180, 120 )
nodes/CombatRest/node = SubResource( 6 )
nodes/CombatRest/position = Vector2( -120, 100 )
nodes/Eyes/node = SubResource( 7 )
nodes/Eyes/position = Vector2( -40, 220 )
nodes/output/position = Vector2( 420, 120 )
node_connections = [ "output", 0, "Blend", "Blend", 0, "CombatRest", "Blend", 1, "Eyes" ]

[sub_resource type="BoxShape" id=9]
extents = Vector3( 2, 1, 2 )

[sub_resource type="BoxShape" id=10]
extents = Vector3( 5, 5, 1 )

[node name="Menu" type="Node"]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="SoundEffects" type="Node" parent="."]
__meta__ = {
"_editor_description_": "There must be an AudioStreamPlayer node at the path \"SoundEffects/Step\" next to the player model, anywhere that the player model is instanced. This is to prevent the animation from deleting the step from the track."
}

[node name="Step" type="AudioStreamPlayer" parent="SoundEffects"]
__meta__ = {
"_editor_description_": "There must be an AudioStreamPlayer node at the path \"SoundEffects/Step\" next to the player model, anywhere that the player model is instanced. This is to prevent the animation from deleting the step from the track."
}

[node name="Floor" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0 )
visible = false
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 0.967027, 0, 0.254675, -0.225291, 0.466312, 0.855452, -0.118758, -0.88462, 0.450936, 0.557445, 2.31204, 0.556668 )
shadow_enabled = true
shadow_bias = 0.01

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../PlayerModel/AnimationPlayer")
parameters/Blend/blend_amount = 1.0

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 20.1403
margin_top = 5.03506
margin_right = 1044.14
margin_bottom = 238.035
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" parent="." instance=ExtResource( 7 )]

[node name="BackgroundCache" type="Spatial" parent="."]
transform = Transform( 0.931266, 0, -0.36434, 0, 1, 0, 0.36434, 0, 0.931266, 0.964945, -4.06729, -10.5854 )
__meta__ = {
"_editor_description_": "This section forces Godot to cache the models/materials/shaders by creating them on the menu. Everything is out of sight because it is behind the floor, but it's within the camera's view frustum."
}

[node name="RedRobot" parent="BackgroundCache" instance=ExtResource( 19 )]

[node name="Floor" type="StaticBody" parent="BackgroundCache"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
collision_layer = 2147483651
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="BackgroundCache/Floor"]
shape = SubResource( 9 )

[node name="Target" type="StaticBody" parent="BackgroundCache"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 3 )
collision_layer = 2147483650
collision_mask = 2147483650

[node name="CollisionShape" type="CollisionShape" parent="BackgroundCache/Target"]
shape = SubResource( 10 )

[node name="Bullet" parent="BackgroundCache" instance=ExtResource( 20 )]
transform = Transform( -1, 8.4334e-08, 3.14739e-07, 0, 0.965926, -0.258819, -3.25841e-07, -0.258819, -0.965926, 0, -20, -80 )

[node name="MeshInstance" parent="BackgroundCache/Bullet" index="0"]
visible = true

[node name="ExplosionAudio" parent="BackgroundCache/Bullet" index="4"]
unit_db = -80.0

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1900, 1080 )
transparent_bg = true
msaa = 3
render_target_v_flip = true

[node name="PlayerModel" parent="Viewport" instance=ExtResource( 3 )]
visible = false

[node name="Robot_Skeleton" parent="Viewport/PlayerModel" index="0"]
transform = Transform( 0.803991, 0, 0, 0, 0.803991, 0, 0, 0, 0.803991, 0, 0, 0 )

[node name="Camera" type="Camera" parent="Viewport"]
transform = Transform( 0.871624, -0.0363083, 0.488828, 0, 0.997253, 0.0740721, -0.490175, -0.064563, 0.86923, 0.0702285, 1.22404, 2.09675 )

[connection signal="play" from="UI" to="." method="_on_play_pressed"]
[connection signal="quit" from="UI" to="." method="_on_quit_pressed"]

[editable path="BackgroundCache/Bullet"]
[editable path="Viewport/PlayerModel"]
